--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,10 @@ section p {
 .fifteen {
   margin-bottom: 15px;
 }
-
+.mr-b-30{
+  display: inline-block;
+  margin-bottom: 30px;
+}
 .twenty {
   margin-bottom: 20px;
 }
